--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,87 +1,85 @@
 .toolbar-logo {
-  width: 95px;
-  height: auto;
-}
-
-@media only screen and (max-width: 768px) {
-  #toolbar {
+    width: 70px;
     height: auto;
   }
-
-}
-
-.flex {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.nav-link {
-  text-decoration: none;
-  color: white;
-  font-size: 0.75rem;
-  font-weight: bold;
-  position: relative;
-  overflow: hidden;
-}
-
-.nav-link:hover {
-  font-size: 0.95rem;
-}
-
-.nav-link:before,
-.nav-link:after {
-  content: '';
-  position: absolute;
-  width: 0;
-  height: 2px;
-  background-color: #fff;
-  transition: width 0.3s ease-in-out;
-}
-
-.nav-link:before {
-  bottom: 0;
-  left: 0;
-}
-
-.nav-link:after {
-  top: 0;
-  right: 0;
-}
-
-.nav-link:hover:before,
-.nav-link:hover:after {
-  width: 100%;
-}
-
-.pi-btn {
-  color: white;
-  text-decoration: none;
-  position: absolute;
-  bottom: 10px;
-  /* Ajuste conforme necessário para a posição vertical */
-  right: 10px;
-  /* Ajuste conforme necessário para a posição horizontal */
-  background-color: black;
-  border: 1px solid black;
-  padding: 10px;
-  opacity: 0.6;
-  transition: opacity 0.3s;
-  font-size: 20px;
-}
-
-.pi-btn:hover {
-  opacity: 1;
-}
-
-
-
-
-.pi-image {
-  width: 100%;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
+  
+  @media only screen and (max-width: 768px) {
+    #toolbar {
+      height: auto; 
+    }
+    
+  }
+  
+  .flex {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .nav-link {
+    text-decoration: none;
+    color: white;
+    font-size: 0.75rem;
+    font-weight: bold;
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .nav-link:hover {
+    font-size: 0.95rem;
+  }
+  
+  .nav-link:before,
+  .nav-link:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: #fff;
+    transition: width 0.3s ease-in-out;
+  }
+  
+  .nav-link:before {
+    bottom: 0;
+    left: 0;
+  }
+  
+  .nav-link:after {
+    top: 0;
+    right: 0;
+  }
+  
+  .nav-link:hover:before,
+  .nav-link:hover:after {
+    width: 100%;
+  }
+  
+  .pi-btn {
+    color: white;
+    text-decoration: none;
+    margin-top: -45px;
+    margin-left: 00px;
+    float: right;
+    background-color: black;
+    padding: 10px;
+    opacity: 0.6;
+    transition: opacity 0.3s;
+    border: 1px solid black;
+    font-size: 20px;
+  }
+  
+  .pi-btn:hover {
+    opacity: 1;
+  }
+  
+  .pi-image {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    display: block; /* Certifique-se de que a imagem é exibida como bloco */
+    object-fit: cover; /* Isso garante que a imagem cubra completamente o contêiner */
+    box-sizing: border-box;
+  }
+  
+  
