--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
   }"
 >
   <ng-template pTemplate="start">
-    <img src="assets/Camping-branco.png" class="toolbar-logo" />
+   <a href="#"><img src="assets/Camping-branco.png" class="toolbar-logo" /></a>
   </ng-template>
   <ng-template pTemplate="end">
     <div class="flex align-items-center gap-2">
