--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,16 +1,11 @@
-
 <div class="container">
-    <!-- Seção da imagem -->
-    <div class="image-section">
-      <img [src]="imagemFundador" alt="Imagem Atual" class="image">
-    </div>
-  
-    <!-- Seção de informações -->
-    <div class="info-section">
-      <h2>Inflamar a Chama do Amor</h2>
-      <p>“aos Sagrados da Santa Igreja.”</p>
-      <p>Luan Eduardo</p>
-    </div>
+  <div class="image-section">
+    <img [src]="imagemFundador" alt="Imagem Atual" class="image" />
   </div>
 
-  
+  <div class="info-section">
+    <h2>Ser Todo Teu é...</h2>
+    <p>“Inflamar a chama do amor aos Sagrados da Santa Igreja.”</p>
+    <p>Luan Eduardo</p>
+  </div>
+
