--- a/src/app/components/first-component/first-component.component.scss
+++ b/src/app/components/first-component/first-component.component.scss
@@ -31,9 +31,15 @@
     margin-top: 30px;
     text-align: center;
     flex-grow: 1;
+    font-family: cursive,'Times New Roman', Times, serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    font-style: italic;
 }
 
 .info-section h2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin-bottom: 10px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-style: italic;
 }
